# LinuxHomework

./: .gitignore  a.out
ENV-1.2/: .minMax.cpp.swp  a.out  minMax.cpp  reverse.cpp
ENV-2/: cnas_class.h  cnas_main.cpp  program  sorting_algorithm.cpp  sorting_algorithm.h
Environment/ENV-1.2/: minMax.cpp
Environment/ENV-2/: .makefile.swp  cnas_class.cpp  makefile
FileSystem/FS-1/: makefile  read-file.cpp
FileSystem/FS-10/: CMakeLists.txt  copy.cpp
FileSystem/FS-2/: makefile  simple-copy.cpp
FileSystem/FS-4/: rsi.cpp  (+2 more)
IPC/IPC-4/: CMakeLists.txt  Client.cpp  Client.h  ClientMain.cpp  Server.cpp  Server.h  ServerMain.cpp
Processes/: PS-1.cpp
Threads/TH-2/: CMakeLists.txt  parallelScheduler.cpp  parallelScheduler.h  threadPool.cpp
sideTask/: chunk_00000001.tmp  chunk_00000002.tmp  chunk_00000003.tmp  chunk_00000004.tmp  chunk_00000005.tmp  chunk_00000006.tmp  chunk_00000007.tmp  chunk_00000008.tmp  chunk_00000009.tmp  chunk_00000010.tmp  chunk_00000011.tmp  chunk_00000012.tmp  chunk_00000013.tmp  chunk_00000014.tmp  chunk_00000015.tmp  chunk_00000016.tmp  chunk_00000017.tmp  chunk_00000018.tmp  chunk_00000019.tmp  chunk_00000020.tmp  chunk_00000021.tmp  chunk_00000022.tmp  chunk_00000023.tmp  chunk_00000024.tmp  chunk_00000025.tmp  chunk_00000026.tmp  chunk_00000027.tmp  chunk_00000028.tmp  chunk_00000029.tmp  chunk_00000030.tmp  chunk_00000031.tmp  chunk_00000032.tmp  chunk_00000033.tmp  chunk_00000034.tmp  chunk_00000035.tmp  chunk_00000036.tmp  chunk_00000037.tmp  chunk_00000038.tmp  chunk_00000039.tmp  chunk_00000040.tmp  (+7707 more)
sideTask1/: httpClient.cpp
(+31 files in other folders)
